Iniciei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Treinamentos Diversos</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Treinando HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam dolorum qui accusamus ducimus a maxime nesciunt ullam quo eaque quasi vel saepe quos eum magni tempore optio, eos temporibus numquam!</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Treinando JavaScript</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe mollitia eos porro molestiae eum autem iste at? Possimus, autem? Culpa tempora similique debitis, harum esse mollitia minima? Nobis, dolores totam.</p>
         </article>
     </main>
 </body>
