--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <main>
         <header>
-            <h1>Treinamentos Diversos</h1>
+            <h1>Treinamentos</h1>
         </header>
         <article>
             <h2>Treinando HTML5 com CSS3</h2>
