--- a/index.html
+++ b/index.html
@@ -11,15 +11,22 @@
 <body>
     <main>
         <header>
-            <h1>Treinamentos</h1>
+            <h1>Treinamento Umbrella Corp.</h1>
+            <img src="imagens/Umbrella_Corporation_240.png" alt="Umbrella Corp.">
         </header>
         <article>
             <h2>Treinando HTML5 com CSS3</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam dolorum qui accusamus ducimus a maxime nesciunt ullam quo eaque quasi vel saepe quos eum magni tempore optio, eos temporibus numquam!</p>
+            <img class="lado" src="imagens/HTML100.png" alt="Logo HTML">
+            <p>A <abbr title="HyperText Markup Language">HTML</abbr> é uma linguagem de marcação para a criação de sites. Atualmente na versão 5, ela usa a semântica dos elementos para criar o conteúdo de uma página Web. Com as <abbr title="Cascading style Sheets">CSS</abbr>, criamos as configurações visuais que um site vai ter.</p>
+            
+            <a href="curso_html.html">Clique aqui para aprender mais de HTML5 e CSS3!!</a>
         </article>
         <article>
             <h2>Treinando JavaScript</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe mollitia eos porro molestiae eum autem iste at? Possimus, autem? Culpa tempora similique debitis, harum esse mollitia minima? Nobis, dolores totam.</p>
+            <img class="lado" src="imagens/javascript-shield-logo-icon-100.png" alt="Logo JavaScript">
+            <p><abbr title="JavaScript">JavaScript</abbr> é mua linguagem de script criada para aumentar a interatividade entre um site e seus visitantes. Os códigos em JS são executados dentro do navegador e dão acesso aos elementos HTML por meio do <abbr title="Document Object Model">DOM</abbr>.</p>
+
+            <a href="curso_js.html">Clique aqui para aprender mais de JavaScript!!</a>
         </article>
     </main>
 </body>
